--- a/site.css
+++ b/site.css
@@ -12,7 +12,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 1em 2em;
-    background-color: #222;
+   background-color: black;
     color: white;
 }
 
@@ -23,15 +23,33 @@
 }
 
 .hero {
-    background-image: url('images/Catedral_San_Pedro.jpg');
-    background-size: cover;
-    background-position: center;
+    position: sticky;
     height: 500px;
-    color: white;
-    display: flex;
+    display: column;
     justify-content: center;
     align-items: center;
     text-align: center;
+    overflow: hidden;
+}
+.hero-video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    transform: translate(-50%, -50%);
+    z-index: 0;
+    object-fit: cover;
+    filter: brightness(0.6);
+}
+
+.hero-content {
+    position: relative;
+    top: 160px;
+    z-index: 1;
+    color: white;
 }
 
 .hero-content h1 {
@@ -63,7 +81,7 @@
     width: 250px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
 }
-.card1 {
+.card1, .card2, .card3, .card4, .card5, .card6 {
     position: relative;
     background-color: #3a3838;
     padding: 1em;
@@ -75,6 +93,76 @@
     transition: background 0.3s ease;
 }
 
+.card2::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('images/cueva.jpeg'); 
+    background-size: cover;
+    background-position: center;
+    opacity: 0.2; 
+    transition: opacity 0.3s ease;
+    z-index: 0;
+}
+.card3::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('images/cueva.jpeg'); 
+    background-size: cover;
+    background-position: center;
+    opacity: 0.2; 
+    transition: opacity 0.3s ease;
+    z-index: 0;
+}
+.card4::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('images/cueva.jpeg'); 
+    background-size: cover;
+    background-position: center;
+    opacity: 0.2; 
+    transition: opacity 0.3s ease;
+    z-index: 0;
+}
+.card5::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('images/cueva.jpeg'); 
+    background-size: cover;
+    background-position: center;
+    opacity: 0.2; 
+    transition: opacity 0.3s ease;
+    z-index: 0;
+}
+.card6:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('images/cueva.jpeg'); 
+    background-size: cover;
+    background-position: center;
+    opacity: 0.2; 
+    transition: opacity 0.3s ease;
+    z-index: 0;
+}
 .card1::before {
     content: "";
     position: absolute;
@@ -89,6 +177,7 @@
     transition: opacity 0.3s ease;
     z-index: 0;
 }
+
 
 .tradiciones {
     text-align: center;
@@ -169,7 +258,7 @@
 
 }
 
-.card1:hover::before {
+.card1:hover::before, .card2:hover::before, .card3:hover::before, .card4:hover::before, .card5:hover::before ,.card6:hover::before {
     opacity: 1;
 }
 
