--- a/site.css
+++ b/site.css
@@ -27,7 +27,7 @@ body{
 .hero {
     position: sticky;
     height: 500px;
-    display: column;
+    
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -266,7 +266,7 @@ body{
 
 .card1:hover * {
     opacity: 0;
-}
+} 
 
 .Reservas {
     height: 70px;
@@ -379,6 +379,16 @@ body{
   100% {
     scroll-snap-align: center;
   }
+} 
+
+@media (max-width: 600px) {
+  .carousel {
+    padding-top: 50%;
+  }
+
+  #carousel__slide1, #carousel__slide2, #carousel__slide3, #carousel__slide4 {
+    height: 20em;
+  }
 }
 
 .carousel{
@@ -386,6 +396,8 @@ body{
   margin: 0 auto;
   padding: 0 1.25rem;
   font-family: 'Lato', sans-serif;
+  margin-bottom: 10px ;
+  margin-top: 100px;
 }
 
 * {
@@ -422,6 +434,34 @@ ol, li {
   padding-top: 30%;
   filter: drop-shadow(0 0 10px #0003);
   perspective: 100px;
+}
+#carousel__slide1{
+background-image: url(images/artesanias\ electronica.jpg);
+background-size: cover;
+background-position: center;
+background-repeat: no-repeat;
+height: 30em;
+}
+#carousel__slide2{
+  background-image: url(images/san\ pedro\ electronica.jpg);
+  background-size: cover;
+background-position: center;
+background-repeat: no-repeat;
+height: 30em;
+}
+#carousel__slide3{
+  background-image: url(images/san\ pedro\ electronica\ 2.jpg);
+  background-size: cover;
+background-position: center;
+background-repeat: no-repeat;
+height: 30em;
+}
+#carousel__slide4{
+  background-image: url(images/corpus\ cristi\ electronica.jpg  );
+  background-size: cover;
+background-position: center;
+background-repeat: no-repeat;
+height: 30em;
 }
 
 .carousel__viewport {
@@ -503,9 +543,11 @@ ol, li {
 }
 
 .carousel__navigation-button {
+  position: relative;
+  bottom: 70px;
   display: inline-block;
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 1.0rem;
+  height: 1.0rem;
   background-color: #333;
   background-clip: content-box;
   border: 0.25rem solid transparent;
@@ -566,4 +608,11 @@ ol, li {
     background-color: #fff;
     border-color: #333;
   }
-   
+  .titulo-carousel {
+    position: relative;
+    top: -660px; /* puedes ajustar el número */
+    text-align: center;
+    font-size: 2rem; /* más grande si quieres */
+    font-weight: bold;
+    color: black; /* o el color que prefieras */
+}
